add billable flag
